[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Pavel Hrách <pavel@hrach.email>"]
edition = "2018"

[dependencies]

[[bin]]
name = "2019-23"
path = "src/2019/day23.rs"

[[bin]]
name = "2020-01"
path = "src/2020/day01.rs"

[[bin]]
name = "2020-02"
path = "src/2020/day02.rs"

[[bin]]
name = "2020-03"
path = "src/2020/day03.rs"

[[bin]]
name = "2020-04"
path = "src/2020/day04.rs"

[[bin]]
name = "2020-05"
path = "src/2020/day05.rs"

[[bin]]
name = "2020-06"
path = "src/2020/day06.rs"

[[bin]]
name = "2020-07"
path = "src/2020/day07.rs"